# PulsEvents_p10

./: .env  .env.exemple  README.md  app.py  pyproject.toml
data/: processed.parquet
data/faiss_index/: index.pkl
script/: data_pre_processing.py  test.py  vectorisation_mistral.py
test/: test.py
